--- a/src/index.css
+++ b/src/index.css
@@ -55,9 +55,8 @@ body {
 .react-autosuggest__suggestions-container--open {
   display: block;
   position: absolute;
-  top: 51px;
+  top: 2em;
   width: 280px;
-  /* border: 1px solid #aaa; */
   border:0;
   background-color: var(--clr-secondary);
   font-family: Helvetica, sans-serif;
@@ -66,6 +65,8 @@ body {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   z-index: 2;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .react-autosuggest__suggestions-list {
